--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "author": "https://github.com/Prawr/",
   "repository": "https://github.com/Prawr/Prawr-Client",
+  "jest": {},
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -14,6 +15,7 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "test-coverage": "react-scripts test --env=jsdom --coverage",
     "eject": "react-scripts eject"
   }
 }
