Fixed a bug that prevened tests to use wrong directories

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "jest": {
     "coverageDirectory": "coverage",
     "coveragePathIgnorePatterns": [
-      "<rootDir>/node_modules/",
-      "<rootDir>/scripts/",
-      "<rootDir>/coverage/",
-      "<rootDir>/public/",
-      "<rootDir>/config/"
+      "<rootDir>/node_modules/**/*",
+      "<rootDir>/scripts/**/*",
+      "<rootDir>/coverage/**/*",
+      "<rootDir>/public/**/*",
+      "<rootDir>/config/**/*"
     ],
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,mjs}"
