--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "node-rest-client": "^3.1.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -99,6 +100,7 @@
     "style-loader": "0.19.0",
     "styled-components": "^2.4.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "unirest": "^0.5.1",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
